# home-miscellaneous

./: .gitignore  TtR.py  battleship.py  game.py  scrabble.py  scrabble2.py
AllInOne/: TicketToRide.py  aio.py  scrabble.py
AllInOne/games/: ticket_to_ride.py
BattleShip/: battleship.py
C-Artec/: InternshipTest.c
Competition Table/: tabel.py  table_v2.py  table_v3.py
Fuel_Calculator/: fuel.py
GetTo100/: game.py
GetTo100_2/: CMakeLists.txt  data.h  display.cpp  display.h  game_logic.cpp  game_logic.h  main.cpp
Monopoly/: money_calc.py  monopoly_banking.py
Scoreboard/: scoreboard.py
Scrabble/: scrabble.py  scrabble2.py
Scrabble_C++/: .gitignore  CMakeLists.txt
Scrabble_C++/src/: main.cpp  main2.cpp
Scrabble_C++/src/IO/: InOut.cpp  InOut.h
Scrabble_C++/src/Player/: Player.h
Scrabble_C++/src/game_logic/: game_data.h  game_logic.cpp  game_logic.h  scores.cpp  scores.h
Scrabble_C++/test/: CMakeLists.txt  data_test.cpp  scores_test.cpp
Text Replacer/: esialgne_tekst.txt  replacemap.json  replacer.py
TicketToRide/: TtR.py  TtR2.py
text_stuff/: corpus  data.csv  data2.csv  new_data.csv  new_data_backup.csv  text.py
twoty/: .gitignore  CMakeLists.txt  main.cpp  twoty.py
